--- a/index.html
+++ b/index.html
@@ -27,5 +27,50 @@
     </div>
   </header>
   <!-- Final do menu -->
+  <!-- inicio da introdução -->
+  <section class="introducao">
+    <div class="container">
+      <h1>Bicicletas Feitas a Mão</h1>
+      <blockquote class="quote-externo">
+        <p>"não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
+        <cite>WILLIAN MORRIS</cite>
+      </blockquote>
+      <a href="produtos.html" class="btn">Orçamento</a>
+    </div>
+  </section>
+  <!-- fim da introdução -->
+  <!-- Inicio do produtos -->
+  <section class="container produtos">
+    <h2 class="sub-titulo">Produtos</h2>
+    <div>
+      <ul class="produtos_lista">
+        <li class="grid-1-3">
+          <div>
+            <img src="./img/produtos/passeio.svg" alt="bikcraft passeio">
+          </div>
+          <h3>Passeio</h3>
+          <p>Ainda assim, existe dúvidas a respeito de como a necessidade de renovação</p>
+        </li>
+        <li class="grid-1-3">
+          <div>
+            <img src="./img/produtos/esporte.svg" alt="bikcraft esporte">
+          </div>
+          <h3>Esporte</h3>
+          <p>Ainda assim, existe dúvidas a respeito de como a necessidade de renovação</p>
+        </li>
+        <li class="grid-1-3">
+          <div>
+            <img src="./img/produtos/retro.svg" alt="bikcraft retro">
+           </div>
+          <h3>Retro</h3>
+          <p>Ainda assim, existe dúvidas a respeito de como a necessidade de renovação</p>
+        </li>
+      </ul>
+      <div class="chamativo">
+        <p>clique aqui e veja os detalhes do produto</p>
+        <a href="produtos.html" class="btn btn-preto">Produtos</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
