site em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -72,5 +72,45 @@
       </div>
     </div>
   </section>
+  <!-- Fim dos produtos -->
+  <!-- inicia portfolio -->
+  <section class="portfolio">
+    <div class="container">
+      <h2 class="sub-titulo">Portfólio</h2>
+      <ul>
+        <li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="imagem portfolio"></li>
+        <li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="imagem portfolio"></li>
+        <li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="imagem portfolio"></li>
+      </ul>
+      <div class="chamativo">
+        <p>conheça mais o nosso portfolio</p>
+        <a href="portfolio.html" class="btn">Portfólio</a>
+      </div>
+    </div>
+  </section>
+  <!-- fim do portfolio -->
+  <!-- inicio da qualidade -->
+  <section class="container qualidade">
+    <h2 class="sub-titulo">Qualidade</h2>
+    <img src="./img/bikcraft-qualidade.svg" alt="bikcraft">
+    <ul class="qualidade-lista">
+      <li class="grid-1-3">
+        <h3>Durabilidade</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod consequat erat, nec bibendum neque mattis at. Etiam auctor eget mauris at pulvinar.</p>
+      </li>
+      <li class="grid-1-3">
+        <h3>Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod consequat erat, nec bibendum neque mattis at. Etiam auctor eget mauris at pulvinar.</p>
+      </li>
+      <li class="grid-1-3">
+        <h3>Sustentabilidade</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod consequat erat, nec bibendum neque mattis at. Etiam auctor eget mauris at pulvinar.</p>
+      </li>
+    </ul>
+    <div class="chamativo">
+      <p>conheça mais o nossa historia</p>
+      <a href="sobre.html" class="btn btn-preto">Sobre</a>
+    </div>
+  </section>
 </body>
 </html>
