--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikecraft</title>
+  <title>Bikecraft - Sobre</title>
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/grid.css">
@@ -28,67 +28,32 @@
   </header>
   <!-- Final do menu -->
   <!-- inicio da introdução -->
-  <section class="introducao">
+  <section class="introducao-interna sobre">
     <div class="container">
-      <h1>Bicicletas Feitas a Mão</h1>
-      <blockquote class="quote-externo">
-        <p>"não tenha nada em sua casa que você não considere útil ou acredita ser bonito"</p>
-        <cite>WILLIAN MORRIS</cite>
-      </blockquote>
-      <a href="produtos.html" class="btn">Orçamento</a>
+      <h1>Sobre</h1>
+      <p>conheça mais sobre bikcraft</p>
     </div>
   </section>
   <!-- fim da introdução -->
-  <!-- Inicio do produtos -->
-  <section class="container produtos">
-    <h2 class="sub-titulo">Produtos</h2>
-    <div>
-      <ul class="produtos_lista">
-        <li class="grid-1-3">
-          <div>
-            <img src="./img/produtos/passeio.svg" alt="bikcraft passeio">
-          </div>
-          <h3>Passeio</h3>
-          <p>Ainda assim, existe dúvidas a respeito de como a necessidade de renovação</p>
-        </li>
-        <li class="grid-1-3">
-          <div>
-            <img src="./img/produtos/esporte.svg" alt="bikcraft esporte">
-          </div>
-          <h3>Esporte</h3>
-          <p>Ainda assim, existe dúvidas a respeito de como a necessidade de renovação</p>
-        </li>
-        <li class="grid-1-3">
-          <div>
-            <img src="./img/produtos/retro.svg" alt="bikcraft retro">
-           </div>
-          <h3>Retro</h3>
-          <p>Ainda assim, existe dúvidas a respeito de como a necessidade de renovação</p>
-        </li>
-      </ul>
-      <div class="chamativo">
-        <p>clique aqui e veja os detalhes do produto</p>
-        <a href="produtos.html" class="btn btn-preto">Produtos</a>
-      </div>
+  <!-- inicio do sobre -->
+  <section class="missao_sobre container">
+    <div class="grid-10">
+      <h2 class="subtitulo-interno">Historia, Missão e Visão</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod consequat erat, nec bibendum neque mattis at. Etiam auctor eget mauris at pulvinar.Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod consequat erat, nec bibendum neque mattis at. Etiam auctor eget mauris at pulvinar.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod consequat erat, nec bibendum neque mattis at. Etiam auctor eget mauris at pulvina</p>
     </div>
-  </section>
-  <!-- Fim dos produtos -->
-  <!-- inicia portfolio -->
-  <section class="portfolio">
-    <div class="container">
-      <h2 class="sub-titulo">Portfólio</h2>
+    <div class="grid-6">
+      <h2 class="subtitulo-interno">Valores</h2>
       <ul>
-        <li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="imagem portfolio"></li>
-        <li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="imagem portfolio"></li>
-        <li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="imagem portfolio"></li>
+        <li> - Foco no cliente</li>
+        <li> - Qualidade no processo</li>
+        <li> - Diversao preservando a qualidade</li>
       </ul>
-      <div class="chamativo">
-        <p>conheça mais o nosso portfolio</p>
-        <a href="portfolio.html" class="btn">Portfólio</a>
-      </div>
+    </div>
+    <div class="grid-16 foto-equipe">
+      <img src="./img/equipe-bikcraft.jpg" alt="equipe bikcraft">
     </div>
   </section>
-  <!-- fim do portfolio -->
   <!-- inicio da qualidade -->
   <section class="container qualidade">
     <h2 class="sub-titulo">Qualidade</h2>
@@ -108,19 +73,10 @@
       </li>
     </ul>
     <div class="chamativo">
-      <p>conheça mais o nossa historia</p>
-      <a href="sobre.html" class="btn btn-preto">Sobre</a>
     </div>
   </section>
   <!-- fim da qualidade -->
-  <section class="quebra">
-    <div class="container">
-      <blockquote class="quote-externo">
-        <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana"</p>
-        <cite>WILLIAN MORRIS</cite>
-      </blockquote>
-    </div>
-  </section>
+  <!-- Inicio do footer -->
   <footer>
     <div class="footer">
       <div class="container">
